--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -7,10 +7,6 @@ body {
   text-align: center;
 }
 
-.fixed{
-  display: fixed;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -18,7 +14,16 @@ header {
   height: 69px;
   align-items: center;
   margin-left: 10px;
-  display: fixed;
+  position: fixed;
+  top: 0;
+  background-color: black;
+  width: 100%;
+  z-index: 2;
+}
+
+nav {
+  margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 nav span{
@@ -27,4 +32,40 @@ nav span{
 
 a:link{
   color: seashell;
+}
+a:visited{
+  color: seashell;
+}
+/*the mssin part*/
+.page {
+  position: absolute;
+  top: 71px;
+  width: 100%;
+}
+
+.mission {
+  background-color: black;
+  position: absolute;
+  top: 300px;
+  width: 100%;
+}
+/* tea of the month part */
+
+.tom img {
+  height: 200px;
+  width: 300px;
+  margin: auto 16.5px;
+}
+.teaofthemonth{
+  margin-top: 75px;
+}
+.tom {
+  width: 1000px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tom h4 {
+  margin-top: 10px;
 }
